# clang-tidy-standalone

./: .gitignore  CMakeLists.txt  ClangTidyForceLinker.h  README.md
cmake/: BuildWithCCache.cmake  OutOfTreeBuild.cmake  utils.cmake
misc/: CMakeLists.txt  MiscTidyModule.cpp
tool/: CMakeLists.txt  ClangTidyMain.cpp
